Add getOption_Coreliteracy Api

--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -35,20 +35,15 @@
                 <div class="contant contant-custom">
                   <div class="selector-group">
                     <h4>核心素養:</h4>
-                    <div class="selector" id="classNum">
-                      <span class="valueShow" data-value="">預設內容</span>
-                      <ul>
-                        <li>預設內容</li>
-                        <li>選項1</li>
-                        <li>選項2</li>
-                        <li>選項3</li>
-                      </ul>
+                    <div class="selector" id="coreliteracy-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
                     </div>
                   </div>
                   <div class="selector-group">
                     <h4>探究學習內容:</h4>
                     <div class="selector" id="classNum">
-                      <span class="valueShow" data-value="">預設內容</span>
+                      <span class="valueShow" data-value>預設內容</span>
                       <ul>
                         <li>預設內容</li>
                         <li>選項1</li>
