--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -10,12 +10,7 @@
       content="width=device-width,initial-scale=1.0,user-scalable=yes,maximum-scale=5.0,minimum-scale=1.0"
     />
     <link rel="stylesheet" href="./css/cms-index.css" />
-    <link
-      id="cssFile"
-      rel="stylesheet"
-      type="text/css"
-      href="./css/student_root.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./css/student_root.css" />
     <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./css/newcss.css" />
     <link rel="stylesheet" type="text/css" href="./css/function.css" />
@@ -42,14 +37,9 @@
                   </div>
                   <div class="selector-group">
                     <h4>探究學習內容:</h4>
-                    <div class="selector" id="classNum">
-                      <span class="valueShow" data-value>預設內容</span>
-                      <ul>
-                        <li>預設內容</li>
-                        <li>選項1</li>
-                        <li>選項2</li>
-                        <li>選項3</li>
-                      </ul>
+                    <div class="selector" id="explorelearning-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
                     </div>
                   </div>
                   <button class="btn confirmBtn search-btn">查詢</button>
@@ -63,8 +53,8 @@
                   <h4>題目名稱(點擊展開作答紀錄)</h4>
                   <h4 class="sm-d-none">測驗時間(年/月/日 時刻)</h4>
                 </div>
-                <div class="scienceLiteracy-history-row">
-                  <div class="scienceLiteracy-history-row-title">
+                <div class="scienceLiteracy-history-row"  id="scienceLiteracy-history-row">
+                  <!-- <div class="scienceLiteracy-history-row-title">
                     <h4>82.全球氣候變遷之融冰現象</h4>
                     <h4 class="sm-d-none">2022-06-08 15:39:47</h4>
                     <i class="fa-solid fa-caret-right"></i>
@@ -133,7 +123,7 @@
                     </div>
                     <button class="btn defaultBtn d-block m-auto row-data-more">
                       查看本題過往作答歷史
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -145,11 +135,87 @@
     </div>
     <script src="./js/customStyle_function.js"></script>
     <script src="./js/jquery-3.5.1.min.ob.js"></script>
+    <script src="./js/loadingoverlay.min.js"></script>
+    <script src="./js/dateTime.js"></script>
     <script src="./js/function.js"></script>
+    <script src="./js/tamplate.js"></script>
     <script
       src="https://kit.fontawesome.com/98e5a63198.js"
       crossorigin="anonymous"
     ></script>
+
+    <script type="text/html" id="scienceLiteracy_history_row_template">
+      <% for ( var i = 0; i < data.length; i++ ) { %>
+        <div class="scienceLiteracy-history-row">
+          <div class="scienceLiteracy-history-row-title">
+            <h4><%= data[i].item_show_num %>.<%= data[i].item_name %></h4>
+            <h4 class="sm-d-none"><%= data[i].examlist.length == 0 ? '無資料' : formatDate(data[i].examlist[0].update_time) %></h4>
+            <i class="fa-solid fa-caret-right"></i>
+          </div>
+          <div class="scienceLiteracy-history-row-data">
+            <h4 class="row-data-title md-d-none">最新測驗日期(年/月/日 時刻)</h4>
+  
+            <p class="md-d-none text-center row-data-content">
+              <%= data[i].examlist.length == 0 ? '無資料' : formatDate(data[i].examlist[0].update_time) %>
+            </p>
+            <h4 class="row-data-title">核心素養</h4>
+  
+            <p class="row-data-content">
+              <%= get12AboutStr(data[i].core_code) %>
+            </p>
+  
+            <h4 class="row-data-title">探究學習內容</h4>
+            <p class="row-data-content">
+              搜集資訊、收集資料數據、分析資料和呈現證據、解釋和推理、評價與省思。
+            </p>
+  
+            <div class="row-data-number md-d-none">
+              <h4 class="row-data-title row-data-number-title">題目(解答)</h4>
+              <div class="row-data-number-btn-group">
+                <% for (var j = 1; j <= data[i].examlist[0].anslist.length; j++ ) { %>
+                  <button class="btn defaultBtn d-block"><%= j %></button>
+                <% } %>
+              </div>
+            </div>
+            <div class="row-data-table">
+              <div class="row-data-table-title">
+                <h4 class="sm-d-none">題目(解答)</h4>
+                <h4>你的答案(依照作答時間近至遠排序)</h4>
+                <h4>對/錯</h4>
+                <h4 class="sm-d-none">作答時間(秒)</h4>
+              </div>
+              <% for (var j = 0; j < data[i].examlist[0].anslist.length; j++ ) { %>
+                <div class="row-data-table-data">
+                  <button class="btn defaultBtn d-block sm-d-none"><%= j+1 %></button>
+                  <h4 class="md-d-none">問題一</h4>
+                  <p><%= data[i].examlist[0].anslist[j].answer %></p>
+                  <% if(data[i].examlist[0].anslist[j].iscorrect == "1") { %>
+                    <img src="./images/correct.png" alt="" />
+                  <% }else{ %>
+                    <img src="./images/error.png" alt="" />
+                  <% } %>
+                  <p class="sm-d-none">54秒</p>
+                </div>
+              <% } %>
+              
+              <!-- <div class="row-data-table-data">
+                <span class="sm-d-none"></span>
+                <h4 class="md-d-none"></h4>
+                <p>因為量筒的水量最少。</p>
+                <img src="./images/error.png" alt="" />
+                <p class="sm-d-none">54秒</p>
+              </div> -->
+            </div>
+            <button class="btn defaultBtn d-block m-auto row-data-more">
+              查看本題過往作答歷史
+            </button>
+          </div>
+        </div>
+      <% } %>
+      
+    </script>
+
     <script src="./js/index.js"></script>
+   
   </body>
 </html>
