--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -56,7 +56,7 @@
                   </div>
                   <button class="btn confirmBtn search-btn">查詢</button>
                 </div>
-                <button class="btn confirmBtn d-block w-100 m-0">
+                <button class="btn confirmBtn d-block w-100 m-0" id="download_history">
                   下載學習紀錄
                 </button>
               </div>
@@ -145,6 +145,7 @@
         </div>
       </section>
     </div>
+    <div class="ModalBoxBig"></div>
     <script src="./js/customStyle_function.js"></script>
     <script src="./js/jquery-3.5.1.min.ob.js"></script>
     <script src="./js/loadingoverlay.min.js"></script>
@@ -234,7 +235,7 @@
       <% } %>
       
     </script>
-
+    <script src="./js/api.js"></script>
     <script src="./js/index.js"></script>
    
   </body>
