Finish Modal Box

--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -238,11 +238,98 @@
       <% } %>
     </script>
 
-    <script type="text/html" id="scienceLiteracy_history_row_template">
-      
+    <script type="text/html" id="scienceLiteracy_history_download_modal_template">
+      <div class="filterBox-group">
+        <h4>選擇已作答題目</h4>
+        <div class="filterBox">
+          <div class="filterBox-input-group">
+            <input type="text" placeholder="輸入試題編號或名稱">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+          </div>
+          <div class="filterBox-checkBox-selectAll">
+            <input type="checkbox" value="selectAll">
+            <label for="selectAll1">全選</label>
+          </div>
+          <div class="filterBox-checkBox-group-list">
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現...</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="filterBox-group">
+        <h4>選擇輸出項目</h4>
+        <div class="filterBox">
+          <div class="filterBox-checkBox-selectAll">
+            <input type="checkbox" value="selectAll">
+            <label>全選</label>
+          </div>
+          <div class="filterBox-checkBox-group-list">
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>題目名稱</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>你的答案</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>過往作答歷史</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>對與錯</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>作答時間(秒)</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>測驗時間(年/月/日 時刻)</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </script>
     <script src="./js/api.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/downloadModal.js"></script>
    
   </body>
 </html>
