Fix Some overflow bug and api data change

--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -253,39 +253,79 @@
           <div class="filterBox-checkBox-group-list">
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox">
-              <label>082. 全球氣候變遷之融冰現...</label>
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox">
+              <label>082. 全球氣候變遷之融冰現</label>
             </div>
           </div>
         </div>
@@ -299,27 +339,27 @@
           </div>
           <div class="filterBox-checkBox-group-list">
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="item_name">
               <label>題目名稱</label>
             </div>
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="answer">
               <label>你的答案</label>
             </div>
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="item_history">
               <label>過往作答歷史</label>
             </div>
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="iscorrect">
               <label>對與錯</label>
             </div>
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="answer_time">
               <label>作答時間(秒)</label>
             </div>
             <div class="filterBox-checkBox-group">
-              <input type="checkbox">
+              <input type="checkbox" value="update_time">
               <label>測驗時間(年/月/日 時刻)</label>
             </div>
           </div>
