Change modal style

--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -263,7 +263,7 @@
           </div>
           <div class="filterBox-checkBox-group-list">
             <% if(data.scienceLiteracyData.length < 0){ %>
-              <h4>
+              <h4 style="margin: 10px 20px">
                 <font color="#E00">
                   尚未有作答紀錄!!
                 </font>
