--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -152,6 +152,7 @@
     <script src="./js/customStyle_function.js"></script>
     <script src="./js/jquery-3.5.1.min.ob.js"></script>
     <script src="./js/loadingoverlay.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.1/xlsx.full.min.js"></script>
     <script src="./js/dateTime.js"></script>
     <script src="./js/function.js"></script>
     <script src="./js/tamplate.js"></script>
@@ -261,7 +262,7 @@
             <input type="checkbox" value="selectAll">
             <label for="selectAll1">全選</label>
           </div>
-          <div class="filterBox-checkBox-group-list">
+          <div class="filterBox-checkBox-group-list" id="history_download_item_filter">
             <% if(data.scienceLiteracyData.length < 0){ %>
               <h4 style="margin: 10px 20px">
                 <font color="#E00">
@@ -285,7 +286,11 @@
             <input type="checkbox" value="selectAll">
             <label>全選</label>
           </div>
-          <div class="filterBox-checkBox-group-list">
+          <div class="filterBox-checkBox-group-list" id="history_download_column_filter">
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox" value="item_show_num">
+              <label>題目編號</label>
+            </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox" value="item_name">
               <label>題目名稱</label>
@@ -293,10 +298,6 @@
             <div class="filterBox-checkBox-group">
               <input type="checkbox" value="answer">
               <label>你的答案</label>
-            </div>
-            <div class="filterBox-checkBox-group">
-              <input type="checkbox" value="item_history">
-              <label>過往作答歷史</label>
             </div>
             <div class="filterBox-checkBox-group">
               <input type="checkbox" value="iscorrect">
@@ -309,6 +310,10 @@
             <div class="filterBox-checkBox-group">
               <input type="checkbox" value="update_time">
               <label>測驗時間(年/月/日 時刻)</label>
+            </div>
+            <div class="filterBox-checkBox-group">
+              <input type="checkbox" value="item_history">
+              <label>過往作答歷史</label>
             </div>
           </div>
         </div>
