Add downloadModal search function

--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -255,8 +255,8 @@
         <h4>選擇已作答題目</h4>
         <div class="filterBox">
           <div class="filterBox-input-group">
-            <input type="text" placeholder="輸入試題編號或名稱">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="text" id="filterBox-input" placeholder="輸入試題編號或名稱">
+            <button id="filterBox-button"><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
           <div class="filterBox-checkBox-selectAll">
             <input type="checkbox" value="selectAll">
