--- a/學習記錄/index.html
+++ b/學習記錄/index.html
@@ -27,6 +27,10 @@
           <div class="pageTabContent">
             <div id="content1">
               <div class="left">
+                <div class="contant contant-collapse active">
+                  <h3>篩選器</h3>
+                  <i class="fa-solid fa-caret-right"></i>
+                </div>
                 <div class="contant contant-custom">
                   <div class="selector-group">
                     <h4>核心素養:</h4>
@@ -56,7 +60,7 @@
                   </div>
                   <button class="btn confirmBtn search-btn">查詢</button>
                 </div>
-                <button class="btn confirmBtn d-block w-100 m-0" id="download_history">
+                <button class="btn confirmBtn d-block w-100 m-0 mt-3" id="download_history">
                   下載學習紀錄
                 </button>
               </div>
