Fix Radar font color & size & some elements space

--- a/學習歷程雷達/index.html
+++ b/學習歷程雷達/index.html
@@ -333,6 +333,7 @@
           </div>
         </div>
       </div>
+      <div class="hr md-d-none"></div>
       <div class="scienceLiteracyStatistics-area">
         <div class="scienceLiteracyStatistics-data type-2">
           <h4 class="sub-title">B 溝通互動</h4>
@@ -479,6 +480,7 @@
           </div>
         </div>
       </div>
+      <div class="hr md-d-none"></div>
       <div class="scienceLiteracyStatistics-area">
         <!-- <h3 class="big-title">「核心素養」的三面九項雷達圖</h3> -->
         <div class="scienceLiteracyStatistics-data type-2">
